--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -7,12 +7,12 @@
         <div class="company">
             <div class="company-description pull-left">
                 <h2>Company</h2>
-                <h3>About Atlan Steel</h3>
-                <p>By taking over a sick plant, Atlan steels strives to manufacture high quality steel by first utilizing the plants full capacity and scaling its production levels through mild steel and then eventually directing majority of its resources into high margin stainless steel.
+                <h3>About ABC Steel</h3>
+                <p>By taking over a sick plant, ABC steels strives to manufacture high quality steel by first utilizing the plants full capacity and scaling its production levels through mild steel and then eventually directing majority of its resources into high margin stainless steel.
                 </p>
                 <p>
                 Restarting an existing sick unit, installing a new 15MT Induction Furnace (backward integration into SMS) and upgrading/revamping the existing Hot Strip/Plate Rolling Mill (1.5mtr width). In addition the Madhya Pradesh govt. (MPSIDC) has introduced benefits for new/restarting units. 
-                A rebate of Rs 1.43 will be introduced per unit of electricity consumed which would total to approximately Rs 900 of benefit per MT based on 3400 MT of slab ingots production per month, and hence saving Atlan Steels upto Rs 30,00,000 per month.</p>
+                A rebate of Rs 1.43 will be introduced per unit of electricity consumed which would total to approximately Rs 900 of benefit per MT based on 3400 MT of slab ingots production per month, and hence saving ABC Steels upto Rs 30,00,000 per month.</p>
             </div>
             <div class="company-thumb pull-right">
                 <img src="{% static 'img/service/service3.jpg' %}" alt="">
@@ -45,16 +45,16 @@
                     <div class="director-list">
                 <div class="col-md-3 col-sm-3">
                         <img src="{% static 'img/director1.jpg' %}" alt="">
-                        <h4>Mr. Yeshwant Singh Bisht </h4>
+                        <h4>Mr. Singh </h4>
                         <h5>Chief Executive Officer of the company,
-                            Atlan Steel Pvt. Ltd.
+                            ABC Steel Pvt. Ltd.
                         </h5>
                     </div>
                 </div>
                 <div class="director-list">
                 <div class="col-md-3 col-sm-3">
                         <img src="{% static 'img/director2.jpg' %}" alt="">
-                        <h4>Mr. Ashok Kathpal</h4>
+                        <h4>Mr. Kumar</h4>
                         <h5> 
                         ED and also the Chief Technical Officer
                         </h5>
@@ -63,14 +63,14 @@
                     <div class="director-list">
                 <div class="col-md-3 col-sm-3">
                         <img src="{% static 'img/director3.jpg' %}" alt="">
-                        <h4>Mr. Vipul Swarup</h4>
+                        <h4>Mr. Gupta</h4>
                         <h5>First Sponsor </h5>
                     </div>
                 </div>
                     <div class="director-list">
                 <div class="col-md-3 col-sm-3">
                         <img src="{% static 'img/client1.jpg' %}" alt="">
-                        <h4>Ms. Surbhi Suri</h4>
+                        <h4>Ms. Sinha</h4>
                         <h5>Second Sponsor</h5>
                     </div>
                 </div>
