--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -111,7 +111,7 @@
                     <div class="item">
                         <div class="about-us">
                             <h3>Quality</h3>
-                            <p>We at Atlan Steel do not compromise on quality of the product.
+                            <p>We at ABC Steel do not compromise on quality of the product.
                             We believe that 
                             "our product quality should advertise about us, not we". 
                             </p>
@@ -225,8 +225,8 @@
                 <div class="welcome">
                     <img src="{% static 'img/service/service1.jpg' %}" alt="">
                     <div class="welcome-details">
-                        <h3>Welcome to Atlan Steel</h3>
-                        <p>Atlan steels strives to manufacture high
+                        <h3>Welcome to ABC Steel</h3>
+                        <p>ABC steels strives to manufacture high
                               quality steel by first utilizing the plants full capacity and scaling its production
                               levels through mild steel and then eventually directing majority of its resources
                               into high margin stainless steel.</p>
