--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
      <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
      <link rel="stylesheet" href="{% static 'css/off-canvas.css' %}"/>
      <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
-    <title>Atlan Steels</title>
+    <title>ABC Steels</title>
 </head>
 <body>
  {% include 'partials/_navbar.html' %}        
